# swarm-abm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/swarm-abm/: Cargo.toml  README.md
crates/swarm-abm-derive/: Cargo.toml
crates/swarm-abm-derive/src/: lib.rs
crates/swarm-abm-derive/tests/: compile_fail.rs
crates/swarm-abm-derive/tests/ui/: bad_variant_named_fields.rs  bad_variant_named_fields.stderr  bad_variant_two_fields.rs  bad_variant_two_fields.stderr  bad_variant_unit.rs  bad_variant_unit.stderr  empty_enum.rs  empty_enum.stderr  not_an_enum.rs  not_an_enum.stderr
crates/swarm-abm/benches/: engine.rs
crates/swarm-abm/src/: agent.rs  batch.rs  continuous.rs  data.rs  experiment.rs  graph.rs  grid.rs  lib.rs  model.rs  rng.rs  schedule.rs  sim.rs
crates/swarm-abm/tests/: checkpoint.rs  decide_with_peers.rs  determinism.rs  experiment.rs  golden_values.rs  parallel_decide.rs  simultaneous.rs  staged.rs
crates/swarm-core/: Cargo.toml
crates/swarm-core/benches/: engine.rs
crates/swarm-core/src/: agent.rs  batch.rs  continuous.rs  data.rs  graph.rs  grid.rs  lib.rs  model.rs  rng.rs  schedule.rs  sim.rs
crates/swarm-core/tests/: determinism.rs  parallel_decide.rs  simultaneous.rs
crates/swarm-models/: Cargo.toml
crates/swarm-models/src/: lib.rs  schelling.rs  sir.rs  sugarscape.rs
crates/swarm-py/: Cargo.toml  demo.py  pyproject.toml
crates/swarm-py/src/: lib.rs
crates/swarm-wasm/: Cargo.toml  README.md
crates/swarm-wasm/src/: lib.rs
crates/swarm-wasm/www/: index.html
docs/: AUDIT.md  PAPER_OUTLINE.md  PLAN_PORT_CPP_SIGRID.md  REPRODUCIBILITY.md  SOTA.md  ficha-swarm-abm.html  reporte_comparacion_cpp.tex
examples/boids/: Cargo.toml
examples/boids/src/: main.rs
examples/difusion/: Cargo.toml
examples/difusion/src/: main.rs
examples/life/: Cargo.toml
examples/life/src/: main.rs
examples/multi-agent/: Cargo.toml
examples/multi-agent/src/: main.rs
examples/network-sir/: Cargo.toml
examples/network-sir/src/: main.rs
examples/rng-dump/: Cargo.toml
examples/rng-dump/src/: main.rs
examples/schelling/: Cargo.toml
examples/schelling/src/: main.rs
examples/sir/: Cargo.toml
examples/sir/src/: main.rs
examples/sugarscape/: Cargo.toml
examples/sugarscape/src/: main.rs
models/debris-flow/: BENCHMARK_OPTIM.md  CALIBRATION.md  Cargo.toml  PARITY.md  PHYSICS_EXPERIMENT.md  export_prediction.py  make_sediment_twi.sh  plot_map.R  plot_progression.R  plot_roc.R  prepare_chanaral.py  prepare_data.py  run_reference.py
models/debris-flow/src/: lib.rs  main.rs  model.rs  optim.rs  raster.rs
models/debris-flow/tests/: synthetic.rs
models/sigrid/: Cargo.toml  PARITY.md
models/sigrid/figs/: make_figure.R
models/sigrid/src/: lib.rs  main.rs
paper/: REVIEW_FIXES.md  REVIEW_FIXES_R2.md  swarm-abm-draft.md
paper/R/: fig_performance.R  fig_scaling.R  theme_paper.R
paper/tex/: highlights.txt  main.tex  refs.bib
validation/: .gitignore  BENCHMARKS.md  CROSS_ENGINE.md  KRABMAGA.md  REPORT.md  RNG_AND_DETERMINISM.md  SCALABILITY.md  VS_CPP_AGROSIM.md  bench_report.py  calibration_benchmark.py  compare.py  plot_benchmark.R  plot_scaling.R  run_benchmark.sh  run_validation.sh
validation/agents-jl/: Manifest.toml  Project.toml  schelling_agents.jl  sir_agents.jl
validation/cpp-repro/: Dockerfile.repro  README.md  run_demo.sh
validation/cpp-sigrid/: .gitignore  README.md  parity.py  sheep_fox.cpp  sigrid_core.hpp
validation/crossplatform/: native.py  wasm.js
validation/data/: bench_summary.csv  scaling.csv
validation/krabmaga-bench/: Cargo.toml
validation/krabmaga-bench/src/: main.rs
validation/mesa/: requirements.txt  schelling_mesa.py  sir_mesa.py
validation/mpi-sigrid/: .gitignore  EVENT_DRIVEN_STUDY.md  README.md  build.sh  sheep_fox_bsp.cpp  validate.sh
validation/scaling-bench/: .gitignore  README.md  run.sh
validation/scaling-bench/cpp/: prey_predator.cpp
validation/scaling-bench/rust/: Cargo.toml
validation/scaling-bench/rust/src/: main.rs
