[package]
name = "swarm-core"
description = "Motor de modelado basado en agentes espacial: scheduling, grillas, vecindades y reproducibilidad determinista"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true, optional = true }

[features]
# Ejecución paralela de ensembles/barridos (rayon). Activado por defecto;
# desactivar (p. ej. para WASM) corre los ensembles secuencialmente.
default = ["parallel"]
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine"
harness = false
