[package]
name = "swarm-models"
description = "Modelos ABM de referencia sobre swarm-core, reutilizables por ejemplos, bindings y benches"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Path directo (no `workspace = true`) para poder apagar default-features:
# el camino WASM pide swarm-models sin `parallel` → swarm-core sin rayon.
swarm-core = { path = "../swarm-core", default-features = false }

[features]
# Activa el rayon de swarm-core (para ensembles/barridos paralelos). Activado
# por defecto; los consumidores WASM piden `default-features = false`.
default = ["parallel"]
parallel = ["swarm-core/parallel"]
