[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "swarm-abm"
description = "Motor de modelado basado en agentes espacial (núcleo Rust) con bindings Python"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
