[package]
name = "swarm-wasm"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Visor WASM de swarm-abm: modelos del motor corriendo en el navegador (canvas)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Camino secuencial (sin rayon): wasm32-unknown-unknown no tiene hilos.
swarm-core = { path = "../swarm-core", default-features = false }
swarm-models = { path = "../swarm-models", default-features = false }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
