[package]
name = "life"
description = "Juego de la Vida de Conway: activación simultánea y decide paralelo"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Path directo para poder reenviar la feature `parallel` (default ON).
swarm-abm = { path = "../../crates/swarm-abm", default-features = false }

[features]
default = ["parallel"]
parallel = ["swarm-abm/parallel"]
